--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Tom Van Acker"]
 version = "0.1.0"
 
 [deps]
+Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Multigraphs = "7ebac608-6c66-46e6-9856-b5f43e107bac"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
