--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Tom Van Acker"]
 version = "0.1.0"
 
 [deps]
+AdditionalUnits = "02d9b4f0-7821-44c6-acbd-01a1ab91b72e"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
