--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Multigraphs = "7ebac608-6c66-46e6-9856-b5f43e107bac"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
