--- a/Project.toml
+++ b/Project.toml
@@ -10,16 +10,18 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Multigraphs = "7ebac608-6c66-46e6-9856-b5f43e107bac"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-julia = "1"
 AdditionalUnits = "0.1.2"
 LightGraphs = "1.3.5"
 Measurements = "2.6.0"
 Multigraphs = "0.2.2"
 OrdinaryDiffEq = "5.59.4"
 Unitful = "1.8.0"
+SpecialFunctions = "2.1.4"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
