--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Multigraphs = "7ebac608-6c66-46e6-9856-b5f43e107bac"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
@@ -19,8 +20,9 @@ LightGraphs = "1.3.5"
 Measurements = "2.6.0"
 Multigraphs = "0.2.2"
 OrdinaryDiffEq = "5.59.4"
-Unitful = "1.8.0"
 SpecialFunctions = "1.8.4"
+Unitful = "1.8.0"
+QuadGK = "2.4.2"
 julia = "1"
 
 [extras]
