--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,14 @@ version = "0.1.2"
 
 [deps]
 AdditionalUnits = "02d9b4f0-7821-44c6-acbd-01a1ab91b72e"
+Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Multigraphs = "7ebac608-6c66-46e6-9856-b5f43e107bac"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
