--- a/Project.toml
+++ b/Project.toml
@@ -5,8 +5,8 @@ version = "0.1.2"
 
 [deps]
 AdditionalUnits = "02d9b4f0-7821-44c6-acbd-01a1ab91b72e"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Multigraphs = "7ebac608-6c66-46e6-9856-b5f43e107bac"
@@ -17,14 +17,15 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-AdditionalUnits = "0.1.2"
-LightGraphs = "1.3.5"
-Measurements = "2.6.0"
-Multigraphs = "0.2.2"
-OrdinaryDiffEq = "5.59.4"
-QuadGK = "2.4.2"
-SpecialFunctions = "1.8.4"
-Unitful = "1.8.0"
+AdditionalUnits = "0.1.4"
+Graphs = "1.8.0"
+Interpolations = "0.14.7"
+Measurements = "2.9.0"
+Multigraphs = "0.3.0"
+OrdinaryDiffEq = "6.55.0"
+QuadGK = "2.8.2"
+SpecialFunctions = "2.3.1"
+Unitful = "1.17.0"
 julia = "1"
 
 [extras]
