--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.2.2"
 
 [deps]
 AdditionalUnits = "02d9b4f0-7821-44c6-acbd-01a1ab91b72e"
+DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -18,6 +19,7 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 AdditionalUnits = "0.1.4"
+DSP = "0.8.2"
 Graphs = "1.9.0"
 Interpolations = "0.15"
 Measurements = "2.11.0"
