--- a/Project.toml
+++ b/Project.toml
@@ -18,15 +18,16 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 AdditionalUnits = "0.1.4"
-Graphs = "1.9.0"
-Interpolations = "0.15"
-Measurements = "2.11.0"
+Graphs = "1.12.0"
+Interpolations = "0.15.1"
+Measurements = "2.12.0"
 Multigraphs = "0.3.0"
-OrdinaryDiffEq = "6.58.2"
-QuadGK = "2.9.4"
-SpecialFunctions = "2.3.1"
-Unitful = "1.19.0"
-julia = "1.8"
+OrdinaryDiffEq = "6.93.0"
+QuadGK = "2.11.2"
+SpecialFunctions = "2.5.0"
+Unitful = "1.22.0"
+SparseArrays = "1.10.0"
+julia = "1.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
