--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,12 +1,10 @@
 name: Documentation
-
 on:
   push:
-    branches: [main]
+    branches: [master]
     tags: '*'
   pull_request:
     types: [opened, synchronize, reopened]
-
 jobs:
   docs:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
